<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.exercise.exercise.point.FragmentPoint">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerHorizontal="true"
                android:text="@string/txtGreatJob"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/backPoint"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_x"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/pink_red"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp">
                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/progressPoint"
                        android:layout_width="148dp"
                        android:layout_height="148dp"
                        app:cpb_background_progressbar_width="10dp"
                        app:cpb_progressbar_width="10dp"
                        app:cpb_round_border="true"
                        app:cpb_background_progressbar_color="@color/white"
                        app:cpb_progressbar_color="@color/pink_purple"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/txtPoint"
                                android:text="@string/sample_score_80"
                                android:textColor="@color/white"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:text="@string/sample_score_out_of"
                                android:textSize="16sp"
                                android:textColor="@color/pink_purple"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <TextView
                            android:text="@string/txtQuestionLabel"
                            android:textColor="@color/pink_purple"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </RelativeLayout>
                <TextView
                    android:id="@+id/notifiPoint"
                    android:text="@string/txtPointsEarnedSample"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/seeAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:layout_marginHorizontal="45dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/pink_purple"
                    app:cardElevation="0dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:text="@string/txtViewAnswers"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_marginVertical="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_marginTop="24dp"
            android:text="@string/txtCorrectAnswers"
            android:textColor="@color/color_to_do_late"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphView"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">
                <TextView
                    android:text="@string/txtCorrectCountTitle"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/numberCorrect"
                    android:layout_marginTop="8dp"
                    android:text="@string/sample_7_questions"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="16dp"
                    android:text="@string/txtSkipUpper"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/skipNumber"
                    android:layout_marginTop="8dp"
                    android:text="@string/sample_count_2"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/doAgainTest"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="17dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/backgroundIntro"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_marginVertical="16dp"
                            android:text="@string/txtRetry"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:text="@string/txtFinishUpper"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/completePercent"
                    android:layout_marginTop="8dp"
                    android:text="@string/sample_percent_80"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="16dp"
                    android:text="@string/txtWrongAnswersTitle"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/wrongNumber"
                    android:layout_marginTop="8dp"
                    android:text="@string/sample_count_1"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/finishAndSaved"
                    android:layout_marginTop="27dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/backgroundIntro"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_marginVertical="16dp"
                            android:text="@string/txtDone"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>