<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".ui.register.FragmentRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:text="@string/txtCreateAccount"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/txtName"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtEnterNameRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/txtEnterName"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_to_do_late"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtYearOfBirth"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/selectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/edtEnterYearOfBirthRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/edtEnterYearOfBirth"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_to_do_late"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/icon_calendar" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtEmailRegister"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtEnterEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/txtEmailRegister"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_to_do_late"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtPhoneRegister"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPhoneRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/edtEnterPhoneRegister"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingEnd="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_to_do_late"
            android:textSize="18sp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_to_do_late"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/hidePasswordRegister"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/icon_hint_grey" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtEnterPassword"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/passwordRegisterRepeat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/txtEnterPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_to_do_late"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/hidePasswordRegisterRepeat"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/icon_hint_grey" />
        </RelativeLayout>

        <TextView
            android:id="@+id/warningRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:text="@string/txt_notification_login"
            android:textColor="@color/color_red"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/registerAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="33dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtHadAccount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login"
                android:textColor="@color/backgroundIntro"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>